--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<frameset rows="30%,*" border="border">
+<frameset rows="30%,*" border=1>
 	<frame src="logo.html" size="norsize" name="f1">
 	<frameset cols="24%,*">
 		<frame src="links.html" name="f2">
